@@ -1,4 +1,11 @@
+version x.x.x - Darkmere ()
+
+    + Fixed bug #8 It is possible to add empty tags and categories.
+        Special chars check done on server side. JS has problems with unicode.
+
+
 version 2.5.1 - Caves of Circe (2020-03-22)
+
     + Bugfix release
 
 version 2.5 - Winnowing Hall (2020-03-21)
